# git-repo-analyzer

./: README.md  main.py  pyproject.toml  requirements.txt
.analysis_reports/: git-repo-analyzer_report.html  report.html
git_repo_analyzer/: analyzer.py  cli.py  file_scanner.py  repo_scanner.py  report.py  report_builder.py  utils.py
git_repo_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reports/: REPORT.md
